<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tipe Keyboard</string>
    
    <string name="label_keyboard_key_go">Go</string>
    <string name="label_keyboard_key_send">Send</string>
    <string name="label_keyboard_key_next">Next</string>
    <string name="label_keyboard_key_done">Done</string>


    <item name="swipe_sensitivity_default" format="float" type="string">0.5</item>

    <string name="label_default_lang">Default</string>
    
    <!--  Here goes the strings for the preferenceses -->
    <string name="activ_swipe_tile">Activate swipe</string>
    
    <string name="chose_lang_title">Choose a language charset</string>
    
    <string name="finetuning_title">More settings</string>
    
    <string name="cus_charset_checkbox">Custom charset</string>
    <string name="cus_charset_dialogTitle">Custom charset</string>
    <string name="cus_charset_dialogMess">Choose a custom charset</string>
    <string name="cus_charset_summary">Set own charset</string>
    <string name="cus_charset_title">Type charset</string>
    
    <string name="cus_symset_checkbox">Custom symbolset</string>
    <string name="cus_symset_dialogTitle">Custom symbolset</string>
    <string name="cus_symset_dialogMess">Choose a custom symbolset</string>
    <string name="cus_symset_summary">Set own symbolset</string>
    <string name="cus_symset_title">Type symbolset</string>
    
    
	<string name="word_separators">" .,;:!?()[]*&amp;@{}/&lt;>_+=|"</string>
	
</resources>
