<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Dt Settings" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="swypeActive"
        android:title="Wischen Aktivieren" />


    <com.bontric.DtSettings.SliderPreference
        android:defaultValue="@string/swipe_sensitivity_default"
        android:dialogMessage="Set Sensitivity"
        android:key="swipe_sensitivity"
        android:title="Swipe sensitivity" />


	
    <ListPreference 
        android:key="cusLanguage"
        android:defaultValue="default"
        android:title="@string/chose_lang_title"
        android:entries="@array/lang_list_names"
        android:entryValues="@array/lang_list_values"
                />   
         

    <PreferenceScreen android:title="Feinschliff" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="useCustomCharset"
            android:title="@string/cus_charset_title" />

        <EditTextPreference
            android:defaultValue="@string/defaultCharset"
            android:dependency="useCustomCharset"
            android:dialogMessage="@string/cus_charset_dialogMess"
            android:dialogTitle="@string/cus_charset_dialogTitle"
            android:key="cusCharset"
            android:summary="@string/cus_charset_summary"
            android:title="@string/cus_charset_title" />
        
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="useCustomSymset"
            android:title="@string/cus_symset_checkbox" />

        <EditTextPreference
            android:defaultValue="@string/SymbolSet"
            android:dependency="useCustomSymset"
            android:dialogMessage="@string/cus_symset_dialogMess"
            android:dialogTitle="@string/cus_symset_dialogTitle"
            android:key="cusSymset"
            android:summary="@string/cus_symset_summary"
            android:title="@string/cus_symset_title" />
    >
    </PreferenceScreen>
preferenceScreen>

</PreferenceScreen>
